gwydion-dylan (2.3.9pre3-2) unstable; urgency=low

  * Updated to 'pre3' tag.
  * Bumped bootstrap counter for autobuilders.

 -- Brent A. Fulgham <bfulgham@debian.org>  Sat, 27 Jul 2002 14:43:47 -0700

gwydion-dylan (2.3.9pre2-1) unstable; urgency=low

  * New upstream sources
  * Improved limited collections (now more efficient.)
  * Build corrections and updated Boehm collector code.
  * Some readline code.
  * A few optimizations to reduce size of executables (especially
    DUIM code.)

 -- Brent A. Fulgham <bfulgham@debian.org>  Thu, 25 Jul 2002 23:00:52 -0700

gwydion-dylan (2.3.8pre1-1) unstable; urgency=low

  * Latest upstream.
  * Corrections for various PR#'s (see http://www.gwydiondylan.org for
    more details.)
  * Correct spelling error (Closes:Bug#124716).
  * Applied semi-fix for PowerPC (Ref:  Bug#135084).  Leaving bug open until
    we have a real solution.

 -- Brent A. Fulgham <bfulgham@debian.org>  Tue, 26 Feb 2002 20:27:17 -0800

gwydion-dylan (2.3.6release-1) unstable; urgency=low

  * Inlined functions now work.
  * Bignum optimizations.
  * Profiling with gprof now works.
  * Upstream release of 2.3.6 version.

 -- Brent A. Fulgham <bfulgham@debian.org>  Sat, 29 Dec 2001 19:30:05 -0800

gwydion-dylan (2.3.6pre2cvs11102001-1) unstable; urgency=low

  * Upstream changes
  * More DUIM additions (font-select)
  * Updates to support single-file mode.
  * Support for clas-level slots.
  * More clean-up and minor optimizations.

 -- Brent A. Fulgham <bfulgham@debian.org>  Sat, 10 Nov 2001 23:18:13 -0800

gwydion-dylan (2.3.6pre2cvs10182001-1) unstable; urgency=low

  * Upstream optimizations to compiler.
  * Implementation of DUIM/GTK+ file-select and directory-select browsers.
  * You can create DUIM apps using 'make-dylan-app -d' syntax.
  * Merging fer-transforms into optimizer.
  * Cleanups to the compiler
  * More Alpha fixes (Thanks to Christopher Chimelis <chris@debian.org>)
