@@ -3,4 +3,5 @@ usr/lib/dylan
 usr/share/doc/gwydion-dylan-extras
 usr/share/man/man1
 usr/share/gwydion-dylan
+usr/share/emacs/site-lisp/gwydion-dylan
 
